# AgenticSystemProject

./: .gitignore  LICENSE  README EN version.md  README.md  pyproject.toml  requirements.txt
examples/: medium_week_calendar.json  sample_calendar.json  test_sample_hard.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts  websocket.ts
frontend/src/components/calendar/: DayColumn.tsx  EventBlock.tsx  TimeAxis.tsx  WeekTimeline.tsx
frontend/src/components/comparison/: VariantComparison.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/optimize/: FlowLog.tsx  OptimizePanel.tsx
frontend/src/components/report/: ProposalRow.tsx  ReportViewer.tsx  (+2 more)
frontend/src/pages/: CalendarPage.tsx  OptimizePage.tsx  ReportPage.tsx
frontend/src/store/: useOptimizationStore.ts
src/: trafficOptimizer.py
src/calendar_optimizer/: __init__.py  report.py  run.py
src/calendar_optimizer/agents/: __init__.py  base.py  flow.py  hr_planner.py  orchestrator.py  schedule_manager.py  traffic_optimizer.py
src/calendar_optimizer/domain/: __init__.py  calendar.py
src/calendar_optimizer/integrations/: __init__.py  google_calendar.py  snapshot.py
src/calendar_optimizer/tools/: __init__.py  calendar_tools.py
src/calendar_optimizer/web/: __main__.py  app.py  dependencies.py  routes_auth.py  routes_calendar.py  routes_optimize.py  schemas.py  static.py
tests/: conftest.py  test_agents.py  test_calendar.py  test_google_calendar.py  test_json_integration.py  test_report.py  test_run.py  test_snapshot.py  test_tools.py
(+1 files in other folders)
